footer contrast fix

--- a/termWebsite/css/adventures.css
+++ b/termWebsite/css/adventures.css
@@ -118,6 +118,9 @@ main a:hover{
      font-size: 1.1rem;
  }
 
+ footer a{
+     color: #22bfb7;
+ }
 /*medium screen*/
 @media only screen and (min-width: 1000px) {
 
