--- a/termWebsite/css/contact.css
+++ b/termWebsite/css/contact.css
@@ -185,6 +185,9 @@ footer {
     padding: 3em;
     font-size: 1.1rem;
 }
+footer a{
+    color: #22bfb7;
+}
 /*medium screen*/
 @media only screen and (min-width: 1000px) {
 
